# otterop

./: .gitignore  .gitmodules  .oopignore  LICENSE  Makefile  README.md
c/: CMakeLists.txt
c/otterop/datastructure/: .oopignore  CMakeLists.txt  linked_list.c  linked_list.h  linked_list_iterator.c  linked_list_node.c  linked_list_node.h  list.c  list.h  list_iterator.c  string_buffer.c  string_buffer.h  test_internal.c  test_internal.h
c/otterop/datastructure/int/: linked_list.h  linked_list_iterator.h  linked_list_node.h  list.h  list_iterator.h  string_buffer.h  test_internal.h
c/otterop/io/: CMakeLists.manual.txt  CMakeLists.txt  console.c  console.h  deps.mk
c/otterop/lang/: .oopignore  CMakeLists.manual.txt  CMakeLists.txt  array.c  array.h  array_iterator.c  deps.mk  error.c  error.h  generic.c  generic.h  oop_iterable.c  oop_iterable.h  oop_iterator.c  oop_iterator.h  oop_object.c  oop_object.h  panic.c  panic.h  result.c  result.h  string.c  string.h  wrapper_oop_iterable.c  wrapper_oop_iterable.h  wrapper_oop_iterator.c  wrapper_oop_iterator.h
c/otterop/lang/int/: array.h  array_iterator.h  error.h  generic.h  oop_iterable.h  oop_iterator.h  oop_object.h  panic.h  result.h  string.h  wrapper_oop_iterable.h  wrapper_oop_iterator.h
c/otterop/test/: CMakeLists.manual.txt  CMakeLists.txt  test_base.c  test_base.h
c/test/: CMakeLists.txt
c/test/tests/otterop/datastructure/: CMakeLists.txt  __tests_main.c  __tests_main_manual.c  test_linked_list.c  test_linked_list.h  test_list.c  test_list.h  test_string_buffer.c  test_string_buffer.h
config/io/: oopconfig.yml
config/lang/: oopconfig.yml
config/test/: oopconfig.yml
dotnet/: otterop.sln
dotnet/Io/: Console.cs
dotnet/Io/Otterop/Io/: Console.cs
dotnet/Lang/: Array.cs  Error.cs  Result.cs  String.cs
dotnet/Lang/Otterop/Lang/: Array.cs
dotnet/Test/: Otterop.Test.csproj
dotnet/otterop/Io/: Console.cs
dotnet/otterop/Lang/: Array.cs  String.cs
dotnet/src/Datastructure/: Otterop.Datastructure.csproj
dotnet/src/Io/: Otterop.Io.csproj
dotnet/src/Test/: Otterop.Test.csproj
dotnet/tests/Datastructure/: Otterop.Datastructure.Tests.csproj
go/: go.mod
go/datastructure/: .oopignore  linkedlist.go  linkedlistiterator.go  linkedlistnode.go  list.go  listiterator.go  stringbuffer.go  testinternal.go  testlinkedlist_test.go  testlist_test.go  teststringbuffer_test.go
go/datastructure/list/: list.go
go/datastructure/testlist/: testlist_test.go
go/io/: console.go
go/io/console/: console.go
go/lang/: .oopignore  array.go  arrayiterator.go  error.go  generic.go  oopiterable.go  oopiterator.go  oopobject.go  panic.go  result.go  string.go  wrapperoopiterable.go  wrapperoopiterator.go
go/lang/array/: array.go
go/lang/error/: error.go
go/lang/generic/: generic.go
go/lang/panic/: panic.go
go/lang/result/: result.go
go/lang/string/: string.go
go/test/: testbase.go
go/test/testbase/: testbase.go
java/: build.gradle.kts  gradle.properties  settings.gradle.kts
java/datastructure/: build.gradle.kts
java/datastructure/config/: oopconfig.yml
java/io/config/: oopconfig.yml
java/otterop/: settings.gradle.kts
java/otterop/transpiler/: build.gradle.kts
java/test/: build.gradle.kts
java/transpiler/: build.gradle.kts
python/datastructure/: pyproject.toml
python/datastructure/otterop/datastructure/: .oopignore  _linked_list_iterator.py  _list_iterator.py  _test_internal.py  linked_list.py  linked_list_node.py  list.py  string_buffer.py  test_linked_list.py  test_list.py  test_string_buffer.py
python/io/: pyproject.toml
python/lang/: pyproject.toml
python/lang/otterop/lang/: .oopignore  _array_iterator.py  array.py  error.py  generic.py  oop_object.py  panic.py  pure_iterator.py  result.py  string.py  wrapper_oop_iterable.py  wrapper_oop_iterator.py
python/test/: pyproject.toml
python/test/otterop/test/: test_base.py
ts/datastructure/: jest.config.js  package.json  pnpm-lock.yaml
ts/datastructure/otterop/datastructure/: .oopignore  LinkedList.ts  LinkedListIterator.ts  LinkedListNode.ts  (+7 more)
ts/io/: console.ts  package-lock.json  package.json  pnpm-lock.yaml
ts/lang/: array.js  array.ts  error.ts  package-lock.json  package.json  pnpm-lock.yaml  result.ts  string.js  string.ts  tsconfig.json
ts/otterop/io/: console.js  console.ts  package.json  tsconfig.json
ts/otterop/lang/: string.ts
ts/test/: package.json  pnpm-lock.yaml  tsconfig.json
(+124 files in other folders)
