[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otterop"]

[project]
name = "otterop-datastructure"
version = "0.2.0"
authors = [
  { name="Emanuele Sabellico", email="emasab@gmail.com" },
]
dependencies = [
  'otterop-lang >= 0.2.0'
]
description = "OtterOP datastructure"
requires-python = ">=3.7"

[project.optional-dependencies]
tests = [
  'pytest >= 7.4.4',
  'otterop-test >= 0.2.0'
]
