[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otterop"]

[project]
name = "otterop-io"
version = "0.2.0"
authors = [
  { name="Emanuele Sabellico", email="emasab@gmail.com" },
]
dependencies = [
  'otterop-lang >= 0.2.0'
]
description = "OtterOP io"
requires-python = ">=3.7"
