[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otterop"]

[project]
name = "otterop-lang"
version = "0.2.0"
authors = [
  { name="Emanuele Sabellico", email="emasab@gmail.com" },
]
description = "OtterOP lang"
requires-python = ">=3.7"
