[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["otterop"]

[project]
name = "otterop-test"
version = "0.2.0"
authors = [
  { name="Emanuele Sabellico", email="emasab@gmail.com" },
]
description = "OtterOP test"
requires-python = ">=3.7"
